--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,9 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  //p Welcome to #{title}
-  ul
+    -var len = posts.length
+    h1 #{title} (#{len})
+    //p Welcome to #{title}
+    ul
       each post in posts
         li
-            a(href="#{post.link}" target="_blank") #{post.name}
+            if post.link
+                a(href="#{post.link}" target="_blank")
+                    span.date #{post.updated_time.getFullYear()}
+                    span.name  #{post.name}
