--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -11,3 +11,5 @@ html(lang='en')
         script(src='http://localhost:35729/livereload.js')
   body
     block content
+
+    script(src='js/app.js')
