--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -12,4 +12,5 @@ html(lang='en')
   body
     block content
 
-    script(src='js/app.js')
+    script(src='/js/jquery.min.js')
+    script(src='/js/app.js')
