--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,17 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
 body {
   padding: 30px;
-  font: 18px 'Roboto Mono', monospace, sans-serif;
+  font: 30px 'Roboto Mono', monospace, sans-serif;
   color: blue; }
+  body.loading ul {
+    opacity: 0.5; }
 
 h1 {
   margin: 0;
   margin-bottom: 1em;
   font-size: 1em;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-weight: 400; }
 
 a {
   color: blue;
@@ -19,7 +22,7 @@ a {
 ul {
   padding: 0;
   margin: 0;
-  column-count: 2; }
+  margin-bottom: 2em; }
   ul li {
     list-style: none; }
     ul li .site-inner {
@@ -41,9 +44,15 @@ ul {
         margin-left: .5em; }
         ul li .site-inner img.img404 {
           display: none; }
-      ul li .site-inner:hover img {
-        position: absolute;
-        top: 9px;
-        right: 0;
-        height: 100px;
-        width: auto; }
+      ul li .site-inner:hover {
+        z-index: 9999; }
+        ul li .site-inner:hover img {
+          position: absolute;
+          top: 9px;
+          height: 100px;
+          width: auto; }
+
+.btn {
+  border: 3px solid;
+  padding: .3em 2em;
+  display: inline-block; }
