--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,8 @@ ul {
         ul li .site-inner img.img404 {
           display: none; }
       ul li .site-inner:hover {
-        z-index: 9999; }
+        z-index: 9999;
+        cursor: url(../img/cursor-pointer.png) 31 23, auto; }
         ul li .site-inner:hover img {
           position: absolute;
           top: 9px;
