--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -57,6 +57,7 @@ ul{
 
 			&:hover{
 				z-index: 9999;
+				cursor: url(../img/cursor-pointer.png) 31 23,auto;
 				img{
 					position: absolute; top: 9px;
 					//right: 0;
