--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-    -var len = 3102
     -var now = new Date();
-    h1 #{title} / 2013-#{now.getFullYear()} / (#{len})
+    h1 #{title} / 2013-#{now.getFullYear()} / (#{total_posts})
     
     ul
         include liste
