--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,20 +1,25 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 
 /* RESET & BASE
 ------------------ */
 @import "reset";
 @import "mixins";
 @import "variables";
-@import "reset";
+//@import "reset";
+@import "utils";
 
 /* =TYPE
 ------------------ */
 @import "typography";
 
+/* =COMPONENTS
+------------------ */
+@import "components";
+
 /* =LAYOUTS
 ------------------ */
 @import "flexboxgrid";
 @import "layout";
+@import "header";
 @import "liste";
 
 
