--- a/app/views/liste.jade
+++ b/app/views/liste.jade
@@ -1,31 +1,23 @@
-.liste-sort
-    .row
-        .col-xs-1
-            div.sort-date Date
-        .col-xs-7
-            div.sort-name Website
-        .col-xs-4
-            div.sort-from.text-right Posted by
-.liste
-    each post in posts
-        .item
-            
+each post in posts
+    .item
+        a(href="#{post.link}" target="_blank")
             .row
                 -var image = post.image
                 if post.link && post.name
-                    //a(href="#{post.link}" target="_blank")
-                    .col-xs-1
-                        div.date #{moment(post.updated_time).format('MM.DD.YY')}
                     
-                    .col-xs-7
-                        a(href="#{post.link}" target="_blank")
-                            div.website_name
-                                span #{post.name}
+                    .col-xs-6
+                        div.title
+                            div.autoradio
+                                span.name #{post.name}
+                                span.url #{post.link}
+                        div.date
+                            span POSTED #{moment(post.updated_time).format('MM.DD.YY HH:MM')}
+                    .col-xs-6
+                        .row
+                            .col-xs-6
                                 if image
-                                    span.img
-                                        img(src="#{image}" width="" height="17" onerror="this.className='img404'")
-                            div.website_url #{post.link}
+                                    figure(style="background-color:")
+                                        img(src="#{image}" width="" height="60" onerror="this.className='img404'")
+                            .col-xs-6
+                                div.from.text-right #{post.from}
 
-                    
-                    .col-xs-4
-                        div.from.text-right #{post.from}
